# tb-ram

./: .clang-format  .gitignore  .pyre_configuration  CMakeLists.txt  README.md  pyproject.toml
include/ram/: algorithm.hpp  io.hpp  lcskpp.hpp  minimizer_engine.hpp  types.hpp  util.hpp
notebooks/: chain-eval.ipynb  common.py  dev.ipynb  nn.py  util.py
scripts/: ofilter.py
scripts/models/: model-strict.cat  model.cat
scripts/notebooks/: chain-eval.ipynb  dev.ipynb  match-analysis.ipynb  ovlp-chain-eval.ipynb  ovlp-eval.ipynb  ram-eval-sample.ipynb  ram-eval.ipynb  raven-lr.ipynb  util.py
src/: algorithm.cpp  io.cpp  lcskpp.cpp  main.cpp  minimizer_engine.cpp  types.cpp
test/: minimizer_engine_test.cpp
